# alexandria

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
examples/: parse_profile.rs
src/: db.rs  download.rs  elastic.rs  io_util.rs  isbn.rs  lib.rs  main.rs  oclc.rs  search.rs  torrents.rs
tests/: integration.rs
tests/fixtures/: elastic_sample.json  torrents_sample.json
