[package]
name = "alexandria"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
tar = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md5 = "0.7"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
# Pinned to exbit/rqbit (PR #580: avoid placeholder files for unselected torrent files → fewer open FDs).
librqbit = { git = "https://github.com/exbit/rqbit", rev = "944c15c", default-features = false, features = ["rust-tls", "http-api-client"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
